--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -12,7 +12,7 @@
     />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" style="margin: 0">
+  <body data-sveltekit-preload-data="hover" style="margin: 0" class="bg-white dark:bg-gray-800">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
