--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,11 @@
     />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" style="margin: 0" class="bg-white dark:bg-gray-800">
+  <body
+    data-sveltekit-preload-data="hover"
+    style="margin: 0"
+    class="bg-white dark:bg-gray-800"
+  >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
